@@ -2,7 +2,7 @@ name = nano
 
 [ReadmeFromPod]
 ; enabled = false
-filename = lib/nano.rakumod
+filename = doc/nano.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/nano.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
