@@ -1,6 +1,8 @@
 Revision history for nano
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.0.1  2022-07-14T20:47:22+02:00
     - Initial version
